--- a/docs/X11.md
+++ b/docs/X11.md
@@ -47,4 +47,4 @@ After Cairo, HarfBuzz are built X11 can be rebuilt with libXft.
  * X11-20160819-foss-2016b.eb (full package with libXft)
 
 ## Dependency Graph 
-(https://fredhutch.github.io/easybuild-life-sciences/X11-project.svg)
+![X11, HarfBuzz, Cairo](https://fredhutch.github.io/easybuild-life-sciences/X11-project.svg?raw=true)
