--- a/docs/R-3.5.0-foss-2016b-fh1.md
+++ b/docs/R-3.5.0-foss-2016b-fh1.md
@@ -1,5 +1,7 @@
 # R-3.5.0-foss-2016b-fh1
-## Package List#### Updated June 07, 2018
+## Package List
+#### Updated June 07, 2018
+
   * [ADGofTest-0.3] (https://cran.r-project.org/web/packages/ADGofTest/index.html) Anderson-Darling GoF test
   * ALDEx2 1.12.0
   * ASCAT 2.4.3
