--- a/docs/_R/R-3.3.3-foss-2016b-fh1.md
+++ b/docs/_R/R-3.3.3-foss-2016b-fh1.md
@@ -1,3 +1,9 @@
+---
+title: R-3.3.3-foss-2016b-fh1
+layout: page
+date: 2018-06-08
+---
+
 # R-3.3.3-foss-2016b-fh1
 ## Package List
 #### Updated June 07, 2018
