convert docs to Jekyll

--- a/docs/_R/R-3.3.3-foss-2016b-fh1.md
+++ b/docs/_R/R-3.3.3-foss-2016b-fh1.md
@@ -1,13 +1,10 @@
 ---
+layout: post
 title: R-3.3.3-foss-2016b-fh1
-layout: page
-date: 2018-06-08
+date: 2017-03-23
 ---
 
-# R-3.3.3-foss-2016b-fh1
-## Package List
-#### Updated June 07, 2018
-
+### Package List
   * [ADGofTest-0.3](https://cran.r-project.org/web/packages/ADGofTest/index.html) Anderson-Darling GoF test
   * [AUC-0.3.0](https://cran.r-project.org/web/packages/AUC/index.html) Threshold independent performance measures for probabilistic<U+000a>classifiers.
   * [AlgDesign-1.1-7.3](https://cran.r-project.org/web/packages/AlgDesign/index.html) Algorithmic Experimental Design
@@ -595,7 +592,7 @@ Exponential-Family Random Graph Models
   * [whisker-0.3-2](https://cran.r-project.org/web/packages/whisker/index.html) {{mustache}} for R, logicless templating
   * [withr-1.0.2](https://cran.r-project.org/web/packages/withr/index.html) Run Code 'With' Temporarily Modified Global State
   * [worrms-0.1.0](https://cran.r-project.org/web/packages/worrms/index.html) World Register of Marine Species (WoRMS) Client
-  * [xlsx-0.5.7](https://cran.r-project.org/web/packages/xlsx/index.html) Read, write, format Excel 2007 and Excel 97/2000/XP/2003 files
+  * [xlsx-0.5.7](https://cran.r-project.org/web/packages/xlsx/index.html) Read, Write, Format Excel 2007 and Excel 97/2000/XP/2003 Files
   * [xlsxjars-0.6.1](https://cran.r-project.org/web/packages/xlsxjars/index.html) Package required POI jars for the xlsx package
   * [xml2-1.1.1](https://cran.r-project.org/web/packages/xml2/index.html) Parse XML
   * [xtable-1.8-2](https://cran.r-project.org/web/packages/xtable/index.html) Export Tables to LaTeX or HTML
