convert docs to Jekyll

--- a/docs/_R/R-3.5.0-foss-2016b-fh1.md
+++ b/docs/_R/R-3.5.0-foss-2016b-fh1.md
@@ -2,6 +2,7 @@
 layout: post
 title: R-3.5.0-foss-2016b-fh1
 date: 2018-05-18
+permalink {{ page.path | prepend:site.baseurl }} 
 ---
 
 ### Package List
