--- a/docs/_posts/2018-07-09-uniref90.md
+++ b/docs/_posts/2018-07-09-uniref90.md
@@ -5,4 +5,4 @@ catagory: biodata
 homepage: https://www.uniprot.org/help/uniref
 ---
 UniRef90 database is downloaded to /shared/biodata/ncbi-blast/uniref90.fasta. To be used with PSI-BLAST
-and to support Psipred.  (PsiPred)[https://github.com/psipred/psipred]
+and to support Psipred.  [PsiPred](https://github.com/psipred/psipred)
