--- a/docs/_posts/2018-09-10-shap.md
+++ b/docs/_posts/2018-09-10-shap.md
@@ -2,6 +2,7 @@
 layout: post
 title: shap (SHapley Additive exPlanations) 
 catagory: lang
+homepage: https://github.com/slundberg/shap
 ---
 SHAP package added to Python build: Python-3.6.5-foss-2016b-fh3
 SHAP (SHapley Additive exPlanations) is a unified approach to explain the output of any machine learning model. SHAP connects game theory with local explanations, uniting several previous methods [1-7] and representing the only possible consistent and locally accurate additive feature attribution method based on expectations (see the SHAP NIPS paper for details).
