fix formating for posts

--- a/docs/_posts/2018-09-21-HTSlib.md
+++ b/docs/_posts/2018-09-21-HTSlib.md
@@ -1,8 +1,11 @@
 ---
 layout: post
-title: HTSlib-1.9-foss-2018b
+title: HTSlib
 catagory: bio
 homepage: homepage = "http://www.htslib.org/"
-___
+---
 HTSlib is an implementation of a unified C library for accessing common file formats, such as SAM, CRAM and VCF, used for high-throughput sequencing data, and is the core library used by samtools and bcftools. 
 HTSlib implements a generalized BAM index, with file extension .csi (coordinate-sorted index). 
+```
+module load HTSlib-1.9-foss-2018b
+```
