--- a/docs/_posts/2018-09-21-SAMtools.md
+++ b/docs/_posts/2018-09-21-SAMtools.md
@@ -1,7 +1,10 @@
 ---
 layout: post
-title: SAMtools-1.9.0-foss-2018b
+title: SAMtools
 catagory: bio
 homepage: http://www.htslib.org/
-___
+---
 SAMtools is a set of utilities for interacting with and post-processing short DNA sequence read alignments in the SAM, BAM and CRAM formats, written by Heng Li. 
+```
+module load 2018-09-21-HTSlib.md
+```
