--- a/docs/_posts/2018-09-21-BCFtools.md
+++ b/docs/_posts/2018-09-21-BCFtools.md
@@ -1,7 +1,10 @@
 ---
 layout: post
-title: BCFtools-1.9-foss-2018b
+title: BCFtools
 catagory: bio
 homepage: http://www.htslib.org/
-___
+---
 BCFtools is a set of utilities that manipulate variant calls in the Variant Call Format (VCF) and its binary counterpart BCF.
+```
+module load BCFtools-1.9-foss-2018b
+```
