--- a/docs/_posts/2018-09-21-BamTools.md
+++ b/docs/_posts/2018-09-21-BamTools.md
@@ -1,8 +1,11 @@
 ---
 layout: post
-title: BamTools-2.5.1-foss-2018b
+title: BamTools
 catagory: bio
 homepage: https://github.com/pezmaster31/%(namelower)s
 ___
 BamTools provides both a programmer's API and an end-user's toolkit for handling BAM files.
 The BAM Format is a binary format for storing sequence data. 
+```
+module load BamTools-2.5.1-foss-2018b
+```
