--- a/fh_easyconfigs/Python-3.7.0-foss-2018b.eb.1
+++ b/fh_easyconfigs/Python-3.7.0-foss-2018b.eb.1
@@ -30,6 +30,10 @@ dependencies = [
 
 osdependencies = [('openssl-devel', 'libssl-dev', 'libopenssl-devel')]
 
+# Try to make sure stack limit is set to unlimited, to avoid compilation errors for hashlib with Intel compilers
+# cfr. https://github.com/easybuilders/easybuild-easyconfigs/issues/6484
+ulimit_unlimited = True
+
 exts_download_dep_fail = True
 
 # workaround for "undefined symbol: __stack_chk_guard"
@@ -71,7 +75,12 @@ exts_list = [
     }),
     ('paycheck', '1.0.2', {
         'source_urls': ['https://pypi.python.org/packages/source/p/paycheck/'],
-        'checksums': ['6db7fc367c146cd59d2327ad4d2d6b0a24bc1be2d6953bb0773cbf702ee1ed34'],
+        'patches': ['paycheck-1.0.2_setup-open-README-utf8.patch'],
+        'checksums': [
+            '6db7fc367c146cd59d2327ad4d2d6b0a24bc1be2d6953bb0773cbf702ee1ed34',  # paycheck-1.0.2.tar.gz
+            # paycheck-1.0.2_setup-open-README-utf8.patch
+            'ceb7f08aebf016cdcd94ae41c1c76c8c120907f85cbfce240d3a112afb264d79',
+        ],
     }),
     ('pbr', '4.0.4', {
         'source_urls': ['https://pypi.python.org/packages/source/p/pbr/'],
@@ -213,6 +222,14 @@ exts_list = [
     ('py_expression_eval', '0.3.4', {
         'source_urls': ['https://pypi.python.org/packages/source/p/py_expression_eval'],
         'checksums': ['b9662c58f8835f6fa3380990f870429fe1176008718a47ce054a7867c4091ad8'],
+    }),
+    ('mpmath', '1.0.0', {
+        'source_urls': ['https://pypi.python.org/packages/source/m/mpmath'],
+        'checksums': ['04d14803b6875fe6d69e6dccea87d5ae5599802e4b1df7997bddd2024001050c'],
+    }),
+    ('tabulate', '0.8.2', {
+        'source_urls': ['https://pypi.python.org/packages/source/t/tabulate/'],
+        'checksums': ['e4ca13f26d0a6be2a2915428dc21e732f1e44dad7f76d7030b2ef1ec251cf7f2'],
     }),
 ]
 
