new GH template

--- a/docs/_updates/2019-01-18-SAMtools.md
+++ b/docs/_updates/2019-01-18-SAMtools.md
@@ -1,10 +1,12 @@
 ---
-layout: post
 title: SAMtools
-catagory:  
-homepage: http://www.htslib.org/
 ---
-## homepage toolchain source_urls # moduleclass
+SAM Tools provide various utilities for manipulating alignments in the SAM format,
+ including sorting, merging, indexing and generating alignments in a per-position format.
+
+Project Homepage: [SAMtools](http://www.htslib.org/)
+
+#### Usage:
 ```
 module load SAMtools/1.9-foss-2016b
 ```
