--- a/docs/_updates/2018-08-08-cisTEM-1.0.0-beta.md
+++ b/docs/_updates/2018-08-08-cisTEM-1.0.0-beta.md
@@ -1,8 +1,11 @@
 ---
 title: cisTEM-1.0.0-beta
-ctagory: bio
-homepage: https://cistem.org
 ---
 cisTEM is user-friendly software to process cryo-EM images of macromolecular complexes and obtain high-resolution 3D reconstructions from them.
 
-cisTEM is an X11 application and will require you to use NoMachine, XQuartz, or native Linux as a client.
+Project HomePage: [cisTEM](https://cistem.org/)
+
+Usage:
+```
+module load cisTEM/1.0.0-beta-foss-2016b
+```
