--- a/docs/_updates/2018-09-21-BEDTools.md
+++ b/docs/_updates/2018-09-21-BEDTools.md
@@ -1,9 +1,11 @@
 ---
 title: BEDTools
-catagory: bio
-homepage: https://github.com/arq5x/bedtools2
 ---
 The BEDTools allow a fast and flexible way of comparing large datasets of genomic features. The BEDtools utilities allow one to address common genomics tasks such as finding feature overlaps and computing coverage. Its name is due to an historical reason because nowadays they can process the most commonly used feature file formats like: BED, GFF, VCF, and SAM.
+
+Project Homepage: [BEDTools](https://github.com/arq5x/bedtools2)
+
+Usage:
 ```
 module load BEDTools-2.27.1-foss-2018b
 ```
