--- a/docs/_updates/2018-09-21-BamTools.md
+++ b/docs/_updates/2018-09-21-BamTools.md
@@ -1,10 +1,12 @@
 ---
 title: BamTools
-catagory: bio
-homepage: https://github.com/pezmaster31/bamtools
 ---
 BamTools provides both a programmer's API and an end-user's toolkit for handling BAM files.
 The BAM Format is a binary format for storing sequence data. 
+
+Project Homepage: [BamTools](https://github.com/pezmaster31/bamtools)
+
+Usage:
 ```
 module load BamTools-2.5.1-foss-2018b
 ```
