--- a/docs/_updates/2018-10-03-MariaDB.md
+++ b/docs/_updates/2018-10-03-MariaDB.md
@@ -1,9 +1,11 @@
 ---
 title: MariaDB
-catagory: data 
-homepage: https://mariadb.org/
 ---
 MariaDB An enhanced, drop-in replacement for MySQL.
+
+Project Homepage: [MariaDB](https://mariadb.org/)
+
+Usage:
 ```
 module load MariaDB/10.1.17-foss-2016b
 ```
