--- a/docs/_updates/2018-10-03-VEP.md
+++ b/docs/_updates/2018-10-03-VEP.md
@@ -1,9 +1,11 @@
 ---
 title: VEP
-catagory: bio 
-homepage: https://www.ensembl.org/info/docs/tools/vep
 ---
 Variant Effect Predictor (VEP) determines the effect of your variants (SNPs, insertions, deletions, CNVs or structural variants) on genes, transcripts, and protein sequence, as well as regulatory regions.
+
+Project Homepage: [VEP](https://www.ensembl.org/info/docs/tools/vep)
+
+Usage:
 ```
 module load VEP/94-foss-2016b-Perl-5.24.1
 ```
