--- a/docs/_updates/2018-10-09-BBMap.md
+++ b/docs/_updates/2018-10-09-BBMap.md
@@ -1,9 +1,11 @@
 ---
 title: BBMap
-catagory: bio 
-homepage: https://sourceforge.net/projects/bbmap/
 ---
 BBMap short read aligner, and other bioinformatic tools.
+
+Project Homepage: [BBMap](https://sourceforge.net/projects/bbmap/)
+
+Usage:
 ```
 module load BBMap/38.26-foss-2018b
 ```
