--- a/docs/_updates/2018-10-09-BWA.md
+++ b/docs/_updates/2018-10-09-BWA.md
@@ -1,9 +1,11 @@
 ---
 title: BWA
-catagory: bio 
-homepage: http://bio-bwa.sourceforge.net/
 ---
 Burrows-Wheeler Aligner (BWA) is an efficient program that aligns relatively short nucleotide sequences against a long reference sequence such as the human genome.
+
+Project Homepage: [BWA](http://bio-bwa.sourceforge.net/)
+
+Usage:
 ```
 module load BWA/0.7.17-foss-2018b
 ```
