--- a/docs/_updates/2018-10-09-DIAMOND.md
+++ b/docs/_updates/2018-10-09-DIAMOND.md
@@ -1,9 +1,11 @@
 ---
 title: DIAMOND
-catagory: bio 
-homepage: https://github.com/bbuchfink/diamond
 ---
 Accelerated BLAST compatible local sequence aligner
+
+Project Homepage: [DIAMOND](https://github.com/bbuchfink/diamond)
+
+Usage:
 ```
 module load DIAMOND/0.9.22-foss-2018b
 ```
