--- a/docs/_updates/2018-10-09-Eigen.md
+++ b/docs/_updates/2018-10-09-Eigen.md
@@ -1,9 +1,11 @@
 ---
 title: Eigen
-catagory: math 
-homepage: http://eigen.tuxfamily.org/index.php?title=Main_Page
 ---
  Eigen is a C++ template library for linear algebra: matrices, vectors, numerical solvers, and related algorithms. 
+
+Project Homepage: [Eigen](http://eigen.tuxfamily.org/index.php?title=Main_Page)
+
+Usage:
 ```
 module load Eigen/3.3.5-foss-2018b
 ```
