--- a/docs/_updates/2018-10-09-MUMmer.md
+++ b/docs/_updates/2018-10-09-MUMmer.md
@@ -1,9 +1,11 @@
 ---
 title: MUMmer
-catagory: bio 
-homepage: http://mummer.sourceforge.net/
 ---
 MUMmer is a system for rapidly aligning entire genomes, whether in complete or draft form. AMOS makes use of it.
+
+Project Homepage: [MUMmer](http://mummer.sourceforge.net/)
+
+Usage:
 ```
 module load MUMmer/4.0.0beta2-foss-2018b
 ```
