--- a/docs/_updates/2018-10-26-PEAR.md
+++ b/docs/_updates/2018-10-26-PEAR.md
@@ -1,9 +1,11 @@
 ---
 title: PEAR
-catagory:  
-homepage: http://sco.h-its.org/exelixis/web/software/pear/
 ---
 PEAR is an ultrafast, memory-efficient and highly accurate pair-end read merger. It is fully parallelized and can run with as low as just a few kilobytes of memory.
+
+Project Homepage: [PEAR](http://sco.h-its.org/exelixis/web/software/pear/)
+
+Usage:
 ```
 module load PEAR/0.9.11-foss-2016b
 ```
