--- a/docs/_updates/2018-11-29-Python.md
+++ b/docs/_updates/2018-11-29-Python.md
@@ -1,10 +1,12 @@
 ---
 title: Python
-catagory:  
-homepage: http://python.org/
 ---
 Python is a programming language that lets you work more quickly and integrate your systems more effectively.
 Basic Python package to be used as base package for our larger Fred Hutch "fh1" Python package. Although this is a basic package it still has scipy, numpy, blist, mpi4py. 
+
+Project Homepage: [Python](http://python.org/)
+
+Usage:
 ```
 module load Python/3.6.7-foss-2018b
 ```
