--- a/docs/_updates/2018-12-06-Python.md
+++ b/docs/_updates/2018-12-06-Python.md
@@ -1,9 +1,11 @@
 ---
 title: Python
-catagory:  
-homepage: http://python.org/
 ---
 The latest Fred Hutch Python build with over 470 modules.
+
+Project Homepage: [Python](http://python.org/)
+
+Usage:
 ```
 module load Python/3.6.7-foss-2016b-fh1
 ```
