--- a/docs/_updates/2018-12-07-prodigal.md
+++ b/docs/_updates/2018-12-07-prodigal.md
@@ -1,9 +1,11 @@
 ---
 title: prodigal
-catagory:  
-homepage: http://prodigal.ornl.gov/
 ---
 Prodigal (Prokaryotic Dynamic Programming Genefinding Algorithm) is a microbial (bacterial and archaeal) gene finding program developed at Oak Ridge National Laboratory and the University of Tennessee.
+
+Project Homepage: [prodigal](http://prodigal.ornl.gov/)
+
+Usage:
 ```
 module load prodigal/2.6.3-GCC-5.4.0-2.26
 ```
