--- a/docs/_updates/2018-12-13-pplacer.md
+++ b/docs/_updates/2018-12-13-pplacer.md
@@ -1,9 +1,11 @@
 ---
 title: pplacer
-catagory:  
-homepage: https://matsen.fhcrc.org/pplacer/
 ---
 Pplacer places reads on a phylogenetic tree. guppy (Grand Unified Phylogenetic Placement Yanalyzer) yanalyzes them. rppr is a helpful tool for working with reference packages.
+
+Project Homepage: [pplacer](https://matsen.fhcrc.org/pplacer/)
+
+Usage:
 ```
 module load pplacer/1.1.alpha19-foss-2016b
 ```
