--- a/docs/_updates/2018-12-24-Perl.md
+++ b/docs/_updates/2018-12-24-Perl.md
@@ -1,9 +1,11 @@
 ---
 title: Perl
-catagory:  
-homepage: https://www.perl.org/
 ---
 Larry Wall's Practical Extraction and Report Language
+
+Project Homepage: [Perl](https://www.perl.org/)
+
+Usage:
 ```
 module load Perl/5.28.0-foss-2016b
 ```
