--- a/docs/_updates/2019-01-05-R.md
+++ b/docs/_updates/2019-01-05-R.md
@@ -1,9 +1,11 @@
 ---
 title: R
-catagory:  
-homepage: http://www.r-project.org/
 ---
 R is a free software environment for statistical computing and graphics.
+
+Project Homepage: [R](http://www.r-project.org/)
+
+Usage:
 ```
 module load R/3.5.2-foss-2018b
 ```
