--- a/docs/_updates/2019-01-05-julia.md
+++ b/docs/_updates/2019-01-05-julia.md
@@ -1,9 +1,11 @@
 ---
 title: julia
-catagory:  
-homepage: http://www.julialang.org/
 ---
 Julia is a high-level, high-performance dynamic programming language for technical computing, with syntax that is familiar to users of other technical computing environments.
+
+Project Homepage: [julia](http://www.julialang.org/)
+
+Usage:
 ```
 module load julia/1.0.3-foss-2016b
 ```
