--- a/docs/_updates/2019-01-18-BAMtools.md
+++ b/docs/_updates/2019-01-18-BAMtools.md
@@ -1,9 +1,10 @@
 ---
-title: BAMtools
-catagory:  
-homepage: 
+title: BAMtools-2.5.1
 ---
+BamTools provides both a programmer's API and an end-user's toolkit for handling BAM files.
 
+Project HomePage [BamTools](https://github.com/pezmaster31/bamtools)
+Usage:
 ```
-module load BAMtools/1.9-foss-2016b
+module load BAMtools/2.5.1-foss-2016b
 ```
