--- a/docs/_updates/2019-01-18-GATK.md
+++ b/docs/_updates/2019-01-18-GATK.md
@@ -1,9 +1,11 @@
 ---
 title: GATK
-catagory:  
-homepage: http://www.broadinstitute.org/gatk/
 ---
 ## easyblock name homepage toolchain source_urls dependencies modextrapaths sanity_check_paths moduleclass
+
+Project Homepage: [GATK](http://www.broadinstitute.org/gatk/)
+
+Usage:
 ```
 module load GATK/4.0.10.0-foss-2016b-Python-3.6.6
 ```
