--- a/docs/_updates/2018-09-21-BCFtools.md
+++ b/docs/_updates/2018-09-21-BCFtools.md
@@ -1,9 +1,11 @@
 ---
 title: BCFtools
-catagory: bio
-homepage: http://www.htslib.org/
 ---
 BCFtools is a set of utilities that manipulate variant calls in the Variant Call Format (VCF) and its binary counterpart BCF.
+
+Project Homepage: [BCFtools](http://www.htslib.org/)
+
+Usage:
 ```
 module load BCFtools-1.9-foss-2018b
 ```
