--- a/docs/_updates/2018-09-21-HTSlib.md
+++ b/docs/_updates/2018-09-21-HTSlib.md
@@ -1,10 +1,12 @@
 ---
 title: HTSlib
-catagory: bio
-homepage: http://www.htslib.org/
 ---
 HTSlib is an implementation of a unified C library for accessing common file formats, such as SAM, CRAM and VCF, used for high-throughput sequencing data, and is the core library used by samtools and bcftools. 
 HTSlib implements a generalized BAM index, with file extension .csi (coordinate-sorted index). 
+
+Project Homepage: [HTSlib](http://www.htslib.org/)
+
+Usage:
 ```
 module load HTSlib-1.9-foss-2018b
 ```
