--- a/docs/_updates/2018-09-21-SAMtools.md
+++ b/docs/_updates/2018-09-21-SAMtools.md
@@ -1,9 +1,11 @@
 ---
 title: SAMtools
-catagory: bio
-homepage: http://www.htslib.org/
 ---
 SAMtools is a set of utilities for interacting with and post-processing short DNA sequence read alignments in the SAM, BAM and CRAM formats, written by Heng Li. 
+
+Project Homepage: [SAMtools](http://www.htslib.org/)
+
+Usage:
 ```
 module load 2018-09-21-HTSlib.md
 ```
