--- a/docs/_updates/2018-10-03-DBD.md
+++ b/docs/_updates/2018-10-03-DBD.md
@@ -1,9 +1,11 @@
 ---
 title: DBD
-catagory: data 
-homepage: http://search.cpan.org/~capttofu/DBD-mysql-%(version)s/
 ---
 Perl binding for MySQL
+
+Project Homepage: [DBD](http://search.cpan.org/~capttofu/DBD-mysql-%(version)s/)
+
+Usage:
 ```
 module load DBD/mysql-4.033-foss-2016b-Perl-5.24.0
 ```
