--- a/docs/_updates/2018-10-09-BEDOPS.md
+++ b/docs/_updates/2018-10-09-BEDOPS.md
@@ -1,9 +1,11 @@
 ---
 title: BEDOPS
-catagory: bio 
-homepage: http://%(namelower)s.readthedocs.io/en/latest/index.html
 ---
 BEDOPS is an open-source command-line toolkit that performs highly efficient and scalable Boolean and other set operations, statistical calculations, archiving, conversion and other management of genomic data of arbitrary scale. Tasks can be easily split by chromosome for distributing whole-genome analyses across a computational cluster.
+
+Project Homepage: [BEDOPS](http://%(namelower)s.readthedocs.io/en/latest/index.html)
+
+Usage:
 ```
 module load BEDOPS/2.4.35-foss-2018b
 ```
