--- a/docs/_updates/2018-10-09-BioPerl.md
+++ b/docs/_updates/2018-10-09-BioPerl.md
@@ -1,9 +1,11 @@
 ---
 title: BioPerl
-catagory: bio 
-homepage: http://www.bioperl.org/
 ---
 Bioperl is the product of a community effort to produce Perl code which is useful in biology. Examples include Sequence objects, Alignment objects and database searching objects.
+
+Project Homepage: [BioPerl](http://www.bioperl.org/)
+
+Usage:
 ```
 module load BioPerl/2.1.9-foss-2016b-Perl-5.24.0
 ```
