--- a/docs/_updates/2018-10-09-FLASH.md
+++ b/docs/_updates/2018-10-09-FLASH.md
@@ -1,9 +1,11 @@
 ---
 title: FLASH
-catagory: bio 
-homepage: https://ccb.jhu.edu/software/FLASH/
 ---
 FLASH (Fast Length Adjustment of SHort reads) is a very fast and accurate software tool to merge paired-end reads from next-generation sequencing experiments. FLASH is designed to merge pairs of reads when the original DNA fragments are shorter than twice the length of reads. The resulting longer reads can significantly improve genome assemblies. They can also improve transcriptome assembly when FLASH is used to merge RNA-seq data.
+
+Project Homepage: [FLASH](https://ccb.jhu.edu/software/FLASH/)
+
+Usage:
 ```
 module load FLASH/1.2.11-foss-2018b
 ```
