--- a/docs/_updates/2018-10-09-FastQC.md
+++ b/docs/_updates/2018-10-09-FastQC.md
@@ -1,9 +1,11 @@
 ---
 title: FastQC
-catagory: bio 
-homepage: http://www.bioinformatics.babraham.ac.uk/projects/fastqc/
 ---
 FastQC is a quality control application for high throughput sequence data. It reads in sequence data in a variety of formats and can either provide an interactive application to review the results of several different QC checks, or create an HTML based report which can be integrated into a pipeline.
+
+Project Homepage: [FastQC](http://www.bioinformatics.babraham.ac.uk/projects/fastqc/)
+
+Usage:
 ```
 module load FastQC/0.11.8-Java-1.8.0_181
 ```
