--- a/docs/_updates/2018-10-09-FastTree.md
+++ b/docs/_updates/2018-10-09-FastTree.md
@@ -1,9 +1,11 @@
 ---
 title: FastTree
-catagory: bio 
-homepage: http://www.microbesonline.org/fasttree/
 ---
 FastTree infers approximately-maximum-likelihood phylogenetic trees from alignments of nucleotide or protein sequences. FastTree can handle alignments with up to a million of sequences in a reasonable amount of time and memory. 
+
+Project Homepage: [FastTree](http://www.microbesonline.org/fasttree/)
+
+Usage:
 ```
 module load FastTree/2.1.10-foss-2018b
 ```
