--- a/docs/_updates/2018-10-09-GATK.md
+++ b/docs/_updates/2018-10-09-GATK.md
@@ -1,9 +1,11 @@
 ---
 title: GATK
-catagory: bio 
-homepage: http://www.broadinstitute.org/gatk/
 ---
 The Genome Analysis Toolkit or GATK is a software package developed at the Broad Institute to analyse next-generation resequencing data. The toolkit offers a wide variety of tools, with a primary focus on variant discovery and genotyping as well as strong emphasis on data quality assurance. Its robust architecture, powerful processing engine and high-performance computing features make it capable of taking on projects of any size.
+
+Project Homepage: [GATK](http://www.broadinstitute.org/gatk/)
+
+Usage:
 ```
 module load GATK/4.0.10.0-foss-2018b-Python-3.6.6
 ```
