--- a/docs/_updates/2018-10-12-PHASE.md
+++ b/docs/_updates/2018-10-12-PHASE.md
@@ -1,9 +1,11 @@
 ---
 title: PHASE
-catagory:  
-homepage: http://stephenslab.uchicago.edu/phase/download.html
 ---
  The program PHASE implements a Bayesian statistical method for reconstructing haplotypes from population genotype data. Documentation: http://stephenslab.uchicago.edu/assets/software/phase/instruct2.1.pdf
+
+Project Homepage: [PHASE](http://stephenslab.uchicago.edu/phase/download.html)
+
+Usage:
 ```
 module load PHASE/2.1.1
 ```
