--- a/docs/_updates/2018-10-17-strelka.md
+++ b/docs/_updates/2018-10-17-strelka.md
@@ -1,9 +1,11 @@
 ---
 title: strelka
-catagory:  
-homepage: homepage = "https://github.com/Illumina/strelka"
 ---
 Strelka2 is a fast and accurate small variant caller optimized for analysis of germline variation in small cohorts and somatic variation in tumor/normal sample pairs.
+
+Project Homepage: [strelka](homepage)
+
+Usage:
 ```
 module load strelka/2.9.9-foss-2016b
 ```
