--- a/docs/_updates/2018-10-20-HMMER.md
+++ b/docs/_updates/2018-10-20-HMMER.md
@@ -1,9 +1,11 @@
 ---
 title: HMMER
-catagory:  
-homepage: http://hmmer.org/
 ---
 HMMER is used for searching sequence databases for homologs of protein sequences, and for making protein sequence alignments. It implements methods using probabilistic models called profile hidden Markov models (profile HMMs). Compared to BLAST, FASTA, and other sequence alignment and database search tools based on older scoring methodology, HMMER aims to be significantly more accurate and more able to detect remote homologs because of the strength of its underlying mathematical models. In the past, this strength came at significant computational expense, but in the new HMMER3 project, HMMER is now essentially as fast as BLAST.
+
+Project Homepage: [HMMER](http://hmmer.org/)
+
+Usage:
 ```
 module load HMMER/3.2.1-foss-2018b
 ```
