--- a/docs/_updates/2018-11-07-VCFtools.md
+++ b/docs/_updates/2018-11-07-VCFtools.md
@@ -1,9 +1,11 @@
 ---
 title: VCFtools
-catagory:  
-homepage: homepage = "https://vcftools.github.io"
 ---
 The aim of VCFtools is to provide easily accessible methods for working with complex genetic variation data in the form of VCF files.
+
+Project Homepage: [VCFtools](homepage)
+
+Usage:
 ```
 module load VCFtools/0.1.16-foss-2018b-Perl-5.28.0
 ```
