--- a/docs/_updates/2018-11-29-LLVM.md
+++ b/docs/_updates/2018-11-29-LLVM.md
@@ -1,9 +1,11 @@
 ---
 title: LLVM
-catagory:  
-homepage: homepage = "http://llvm.org/"
 ---
 The LLVM Core libraries provide a modern source- and target-independent optimizer, along with code generation support for many popular CPUs (as well as some less common ones!) These libraries are built around a well specified code representation known as the LLVM intermediate representation ("LLVM IR"). The LLVM Core libraries are well documented, and it is particularly easy to invent your own language (or port an existing compiler) to use LLVM as an optimizer and code generator.
+
+Project Homepage: [LLVM](homepage)
+
+Usage:
 ```
 module load LLVM/6.0.0-foss-2016b
 ```
