--- a/docs/_updates/2018-12-07-GTDBTk.md
+++ b/docs/_updates/2018-12-07-GTDBTk.md
@@ -1,9 +1,11 @@
 ---
 title: GTDBTk
-catagory:  
-homepage: https://github.com/Ecogenomics/GTDBTk
 ---
 GTDB-Tk is a software toolkit for assigning objective taxonomic classifications to bacterial and archaeal genomes. It is computationally efficient and designed to work with recent advances that allow hundreds or thousands of metagenome-assembled genomes (MAGs) to be obtained directly from environmental samples. It can also be applied to isolate and single-cell genomes.
+
+Project Homepage: [GTDBTk](https://github.com/Ecogenomics/GTDBTk)
+
+Usage:
 ```
 module load GTDBTk/0.1.3-foss-2016b-Python-3.6.7
 ```
