--- a/docs/_updates/2018-12-09-FastANI.md
+++ b/docs/_updates/2018-12-09-FastANI.md
@@ -1,9 +1,11 @@
 ---
 title: FastANI
-catagory:  
-homepage: homepage = "http://www.iodbc.org/"
 ---
 FastANI is developed for fast alignment-free computation of whole-genome Average Nucleotide Identity (ANI). ANI is defined as mean nucleotide identity of orthologous gene pairs shared between two microbial genomes. FastANI supports pairwise comparison of both complete and draft genome assemblies.
+
+Project Homepage: [FastANI](homepage)
+
+Usage:
 ```
 module load FastANI/1.1-foss-2016b
 ```
