--- a/docs/_updates/2018-12-13-OCaml.md
+++ b/docs/_updates/2018-12-13-OCaml.md
@@ -1,9 +1,11 @@
 ---
 title: OCaml
-catagory:  
-homepage: http://ocaml.org/
 ---
 OCaml is a general purpose industrial-strength programming language with an emphasis on expressiveness and safety. Developed for more than 20 years at Inria it benefits from one of the most advanced type systems and supports functional, imperative and object-oriented styles of programming.
+
+Project Homepage: [OCaml](http://ocaml.org/)
+
+Usage:
 ```
 module load OCaml/4.02.3-foss-2016b
 ```
