--- a/docs/_updates/2018-12-27-Python.md
+++ b/docs/_updates/2018-12-27-Python.md
@@ -1,12 +1,11 @@
 ---
-title: Python
+title: Python-3.6.7
 ---
-SAM Tools provide various utilities for manipulating alignments in the SAM format, 
- including sorting, merging, indexing and generating alignments in a per-position format.
+Python is a programming language that lets you work more quickly and integrate your systems more effectively.
 
-[(SAMtools)](http://www.htslib.org/)
+Project HomePage: [Python](http://python.org)
 
-
+Usage:
 ```
 module load Python/3.6.7-foss-2016b-fh2
 ```
