--- a/docs/_updates/2019-01-18-HTSlib.md
+++ b/docs/_updates/2019-01-18-HTSlib.md
@@ -1,9 +1,11 @@
 ---
 title: HTSlib
-catagory:  
-homepage: http://www.htslib.org/
 ---
 # easyblock name homepage toolchain source_urls dependencies runtest sanity_check_paths moduleclass
+
+Project Homepage: [HTSlib](http://www.htslib.org/)
+
+Usage:
 ```
 module load HTSlib/1.9-foss-2016b
 ```
