fix link software inventory

--- a/docs/_updates/2019-01-18-HTSlib.md
+++ b/docs/_updates/2019-01-18-HTSlib.md
@@ -1,7 +1,8 @@
 ---
-title: HTSlib
+title: HTSlib-1.9
 ---
-# easyblock name homepage toolchain source_urls dependencies runtest sanity_check_paths moduleclass
+A C library for reading/writing high-throughput sequencing data.
+ HTSlib also provides the bgzip, htsfile, and tabix utilities.
 
 Project Homepage: [HTSlib](http://www.htslib.org/)
 
