--- a/docs/_updates/2019-01-18-GATK.md
+++ b/docs/_updates/2019-01-18-GATK.md
@@ -1,7 +1,13 @@
 ---
-title: GATK
+title: GATK-4.0.10.0
 ---
-## easyblock name homepage toolchain source_urls dependencies modextrapaths sanity_check_paths moduleclass
+The Genome Analysis Toolkit or GATK is a software package
+developed at the Broad Institute to analyse next-generation resequencing
+data. The toolkit offers a wide variety of tools, with a primary focus on
+variant discovery and genotyping as well as strong emphasis on data quality
+assurance. Its robust architecture, powerful processing engine and
+high-performance computing features make it capable of taking on projects
+of any size.
 
 Project Homepage: [GATK](http://www.broadinstitute.org/gatk/)
 
