easy_annotate Bioconductor bug fix

--- a/docs/_r/R-3.5.1-foss-2018b.md
+++ b/docs/_r/R-3.5.1-foss-2018b.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: R-3.5.1-foss-2018b
-date: 2019-04-02
+date: 2019-04-03
 ---
 
 ### Package List
@@ -576,7 +576,7 @@ Multilocus Genetic Data
   * [prettyunits-1.0.2](https://cran.r-project.org/web/packages/prettyunits/index.html) Pretty, Human Readable Formatting of Quantities
   * [processx-3.2.0](https://cran.r-project.org/web/packages/processx/index.html) Execute and Control System Processes
   * [prodlim-2018.04.18](https://cran.r-project.org/web/packages/prodlim/index.html) Product-Limit Estimation for Censored Event History Analysis
-  * [profileModel-0.5-9](https://cran.r-project.org/web/packages/profileModel/index.html) Tools for profiling inference functions for various model<U+000a>classes
+  * [profileModel-0.5-9](https://cran.r-project.org/web/packages/profileModel/index.html) Profiling Inference Functions for Various Model Classes
   * [progress-1.2.0](https://cran.r-project.org/web/packages/progress/index.html) Terminal Progress Bars
   * [promises-1.0.1](https://cran.r-project.org/web/packages/promises/index.html) Abstractions for Promise-Based Asynchronous Programming
   * [proto-1.0.0](https://cran.r-project.org/web/packages/proto/index.html) Prototype Object-Based Programming
