--- a/docs/_r/R-3.5.2-foss-2016b-fh1.md
+++ b/docs/_r/R-3.5.2-foss-2016b-fh1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: R-3.5.3-foss-2016b-fh1
+title: R-3.5.2-foss-2016b-fh1
 date: 2019-04-03
 ---
 
@@ -47,7 +47,6 @@ date: 2019-04-03
   * [GOstats-2.48.0](https://www.bioconductor.org/packages/release/bioc/html/GOstats.html) Tools for manipulating GO and microarrays
   * [GSEABase-1.44.0](https://www.bioconductor.org/packages/release/bioc/html/GSEABase.html) Gene set enrichment data structures and methods
   * [GWASExactHW-1.01](https://cran.r-project.org/web/packages/GWASExactHW/index.html) Exact Hardy-Weinburg testing for Genome Wide Association Studies
-  * [GWASTools-1.28.0](https://www.bioconductor.org/packages/release/bioc/html/GWASTools.html) Tools for Genome Wide Association Studies
   * [GenomeGraphs-1.42.0](https://www.bioconductor.org/packages/release/bioc/html/GenomeGraphs.html) Plotting genomic information from Ensembl
   * [GenomeInfoDb-1.18.2](https://www.bioconductor.org/packages/release/bioc/html/GenomeInfoDb.html) Utilities for manipulating chromosome and other 'seqname' identifiers
   * [GenomeInfoDbData-1.2.0](https://www.bioconductor.org/packages/release/bioc/html/GenomeInfoDbData.html) Species and taxonomy ID look up tables used by GenomeInfoDb
@@ -80,7 +79,6 @@ date: 2019-04-03
   * [PBSddesolve-1.12.4](https://cran.r-project.org/web/packages/PBSddesolve/index.html) Solver for Delay Differential Equations
   * [PFAM.db-3.7.0](https://www.bioconductor.org/packages/release/bioc/html/PFAM.db.html) A set of protein ID mappings for PFAM
   * [PICS-2.26.0](https://www.bioconductor.org/packages/release/bioc/html/PICS.html) Probabilistic inference of ChIP-seq
-  * [PKI-0.1-5.1](https://cran.r-project.org/web/packages/PKI/index.html) Public Key Infrastucture for R Based on the X.509 Standard
   * [PolynomF-1.0-2](https://cran.r-project.org/web/packages/PolynomF/index.html) Polynomials in R
   * [ProtGenerics-1.14.0](https://www.bioconductor.org/packages/release/bioc/html/ProtGenerics.html) S4 generic functions for Bioconductor proteomics infrastructure
   * [R2WinBUGS-2.1-21](https://cran.r-project.org/web/packages/R2WinBUGS/index.html) Running 'WinBUGS' and 'OpenBUGS' from 'R' / 'S-PLUS'
@@ -93,7 +91,6 @@ Models
   * [RNASeqPower-1.22.1](https://www.bioconductor.org/packages/release/bioc/html/RNASeqPower.html) Sample size for RNAseq studies
   * [RPostgreSQL-0.6-2](https://cran.r-project.org/web/packages/RPostgreSQL/index.html) R Interface to the 'PostgreSQL' Database System
   * [RProtoBufLib-1.4.0](https://www.bioconductor.org/packages/release/bioc/html/RProtoBufLib.html) C++ headers and static libraries of Protocol buffers
-  * [RSclient-0.7-3](https://cran.r-project.org/web/packages/RSclient/index.html) Client for Rserve
   * [RSpectra-0.13-1](https://cran.r-project.org/web/packages/RSpectra/index.html) Solvers for Large-Scale Eigenvalue and SVD Problems
   * [RcppParallel-4.4.2](https://cran.r-project.org/web/packages/RcppParallel/index.html) Parallel Programming Tools for 'Rcpp'
   * [ReportingTools-2.22.1](https://www.bioconductor.org/packages/release/bioc/html/ReportingTools.html) Tools for making reports in various formats
@@ -118,16 +115,18 @@ Models
   * [TxDb.Hsapiens.UCSC.hg19.knownGene-3.2.2](https://www.bioconductor.org/packages/release/bioc/html/TxDb.Hsapiens.UCSC.hg19.knownGene.html) Annotation package for TxDb object(s)
   * [UpSetR-1.3.3](https://cran.r-project.org/web/packages/UpSetR/index.html) A More Scalable Alternative to Venn and Euler Diagrams for
 Visualizing Intersecting Sets
-  * [VariantAnnotation-1.28.11](https://www.bioconductor.org/packages/release/bioc/html/VariantAnnotation.html) Annotation of Genetic Variants
+  * [VariantAnnotation-1.28.13](https://www.bioconductor.org/packages/release/bioc/html/VariantAnnotation.html) Annotation of Genetic Variants
   * [XVector-0.22.0](https://www.bioconductor.org/packages/release/bioc/html/XVector.html) Representation and manipulation of external sequences
   * [affy-1.60.0](https://www.bioconductor.org/packages/release/bioc/html/affy.html) Methods for Affymetrix Oligonucleotide Arrays
   * [affycoretools-1.54.0](https://www.bioconductor.org/packages/release/bioc/html/affycoretools.html) Functions useful for those doing repetitive analyses with Affymetrix GeneChips
   * [affyio-1.52.0](https://www.bioconductor.org/packages/release/bioc/html/affyio.html) Tools for parsing Affymetrix data files
   * [alr3-2.0.8](https://cran.r-project.org/web/packages/alr3/index.html) Data to Accompany Applied Linear Regression 3rd Edition
   * [amap-0.8-16](https://cran.r-project.org/web/packages/amap/index.html) Another Multidimensional Analysis Package
+  * animation : 2.6 built in
   * [annaffy-1.54.0](https://www.bioconductor.org/packages/release/bioc/html/annaffy.html) Annotation tools for Affymetrix biological metadata
   * [annotate-1.60.1](https://www.bioconductor.org/packages/release/bioc/html/annotate.html) Annotation for microarrays
   * [argparser-0.4](https://cran.r-project.org/web/packages/argparser/index.html) Command-Line Argument Parser
+  * [askpass-1.1](https://cran.r-project.org/web/packages/askpass/index.html) Safe Password Entry for R, Git, and SSH
   * [aws.ec2metadata-0.1.5](https://cran.r-project.org/web/packages/aws.ec2metadata/index.html) Get EC2 Instance Metadata
   * [aws.s3-0.3.12](https://cran.r-project.org/web/packages/aws.s3/index.html) 'AWS S3' Client Package
   * [aws.signature-0.4.4](https://cran.r-project.org/web/packages/aws.signature/index.html) Amazon Web Services Request Signatures
@@ -150,7 +149,6 @@ Plots
   * [coxme-2.2-10](https://cran.r-project.org/web/packages/coxme/index.html) Mixed Effects Cox Models
   * [cummeRbund-2.24.0](https://www.bioconductor.org/packages/release/bioc/html/cummeRbund.html) Analysis, exploration, manipulation, and visualization of Cufflinks high-throughput sequencing data.
   * [cytolib-1.4.1](https://www.bioconductor.org/packages/release/bioc/html/cytolib.html) C++ infrastructure for representing and interacting with the gated cytometry
-  * [dada2-1.10.1](https://www.bioconductor.org/packages/release/bioc/html/dada2.html) Accurate, high-resolution sample inference from amplicon sequencing data
   * [degreenet-1.3-3](https://cran.r-project.org/web/packages/degreenet/index.html) Models for Skewed Count Distributions Relevant to Networks
   * [derfinder-1.16.1](https://www.bioconductor.org/packages/release/bioc/html/derfinder.html) Annotation-agnostic differential expression analysis of RNA-seq data at base-pair resolution via the DER Finder approach
   * [derfinderHelper-1.16.1](https://www.bioconductor.org/packages/release/bioc/html/derfinderHelper.html) derfinder helper package
@@ -160,6 +158,7 @@ Plots
   * [doMPI-0.2.2](https://cran.r-project.org/web/packages/doMPI/index.html) Foreach Parallel Adaptor for the Rmpi Package
   * [edgeR-3.24.3](https://www.bioconductor.org/packages/release/bioc/html/edgeR.html) Empirical Analysis of Digital Gene Expression Data in R
   * [elasticnet-1.1.1](https://cran.r-project.org/web/packages/elasticnet/index.html) Elastic-Net for Sparse Estimation and Sparse PCA
+  * [ellipsis-0.1.0](https://cran.r-project.org/web/packages/ellipsis/index.html) Tools for Working with ...
   * [ensembldb-2.6.7](https://www.bioconductor.org/packages/release/bioc/html/ensembldb.html) Utilities to create and use Ensembl-based annotation databases
   * [fastseg-1.28.0](https://www.bioconductor.org/packages/release/bioc/html/fastseg.html) fastseg - a fast segmentation algorithm
   * [fasttime-1.0-2](https://cran.r-project.org/web/packages/fasttime/index.html) Fast Utility Function for Time Parsing and Conversion
@@ -206,7 +205,6 @@ when Linkage Phase is Ambiguous
   * [inferference-1.0.0](https://cran.r-project.org/web/packages/inferference/index.html) Methods for Causal Inference with Interference
   * [inline-0.3.15](https://cran.r-project.org/web/packages/inline/index.html) Functions to Inline C, C++, Fortran Function Calls from R
   * [interactiveDisplayBase-1.20.0](https://www.bioconductor.org/packages/release/bioc/html/interactiveDisplayBase.html) Base package for enabling powerful shiny web displays of Bioconductor objects
-  * [itertools-0.1-3](https://cran.r-project.org/web/packages/itertools/index.html) Iterator Tools
   * [its-1.1.8](https://cran.r-project.org/web/packages/its/index.html) Irregular Time Series
   * [kin.cohort-0.7](https://cran.r-project.org/web/packages/kin.cohort/index.html) Analysis of Kin-Cohort Studies
   * [kinship2-1.6.4](https://cran.r-project.org/web/packages/kinship2/index.html) Pedigree Functions
@@ -221,21 +219,19 @@ Bandwidth
   * [lpridge-1.0-8](https://cran.r-project.org/web/packages/lpridge/index.html) Local Polynomial (Ridge) Regression
   * [lumi-2.34.0](https://www.bioconductor.org/packages/release/bioc/html/lumi.html) BeadArray Specific Methods for Illumina Methylation and Expression Microarrays
   * [maSigPro-1.54.0](https://www.bioconductor.org/packages/release/bioc/html/maSigPro.html) Significant Gene Expression Profile Differences in Time Course Gene Expression Data
+  * [magick-2.0](https://cran.r-project.org/web/packages/magick/index.html) Advanced Graphics and Image-Processing in R
   * [mapdata-2.3.0](https://cran.r-project.org/web/packages/mapdata/index.html) Extra Map Databases
   * [mapproj-1.2.6](https://cran.r-project.org/web/packages/mapproj/index.html) Map Projections
   * [marray-1.60.0](https://www.bioconductor.org/packages/release/bioc/html/marray.html) Exploratory analysis for two-color spotted microarray data
   * [metagenomeSeq-1.24.1](https://www.bioconductor.org/packages/release/bioc/html/metagenomeSeq.html) Statistical analysis for sparse high-throughput sequencing
   * [methylumi-2.28.0](https://www.bioconductor.org/packages/release/bioc/html/methylumi.html) Handle Illumina methylation data
-  * [mets-1.2.5](https://cran.r-project.org/web/packages/mets/index.html) Analysis of Multivariate Event Times
   * [minfi-1.28.4](https://www.bioconductor.org/packages/release/bioc/html/minfi.html) Analyze Illumina Infinium DNA methylation arrays
   * [mixOmics-6.6.2](https://cran.r-project.org/web/packages/mixOmics/index.html) Omics Data Integration Project
   * [mondate-0.10.01.02](https://cran.r-project.org/web/packages/mondate/index.html) Keep track of dates in terms of months
-  * [msa-1.14.0](https://www.bioconductor.org/packages/release/bioc/html/msa.html) Multiple Sequence Alignment
   * [multtest-2.38.0](https://cran.r-project.org/web/packages/multtest/index.html) Resampling-based multiple hypothesis testing
   * [ncdf4-1.16.1](https://cran.r-project.org/web/packages/ncdf4/index.html) Interface to Unidata netCDF (Version 4 or Earlier) Format Data
 Files
   * [ncdfFlow-2.28.1](https://www.bioconductor.org/packages/release/bioc/html/ncdfFlow.html) ncdfFlow: A package that provides HDF5 based storage for flow cytometry data.
-  * [ndtv-0.12.3](https://cran.r-project.org/web/packages/ndtv/index.html) Network Dynamic Temporal Visualizations
   * [networksis-2.1-3](https://cran.r-project.org/web/packages/networksis/index.html) Simulate Bipartite Graphs with Fixed Marginals Through
 Sequential Importance Sampling
   * [nws-1.7.0.1](https://cran.r-project.org/web/packages/nws/index.html) R functions for NetWorkSpaces and Sleigh
@@ -285,6 +281,7 @@ Applications
   * [scidb-2.0.0](https://cran.r-project.org/web/packages/scidb/index.html) An R Interface to SciDB
   * [seqLogo-1.48.0](https://www.bioconductor.org/packages/release/bioc/html/seqLogo.html) Sequence logos for DNA sequence alignments
   * [sets-1.0-18](https://cran.r-project.org/web/packages/sets/index.html) Sets, Generalized Sets, Customizable Sets and Intervals
+  * [sf-0.7-2](https://cran.r-project.org/web/packages/sf/index.html) Simple Features for R
   * [shinyBS-0.61](https://cran.r-project.org/web/packages/shinyBS/index.html) Twitter Bootstrap Components for Shiny
   * [shinyFiles-0.7.2](https://cran.r-project.org/web/packages/shinyFiles/index.html) A Server-Side File System Viewer for Shiny
   * [shinycssloaders-0.2.0](https://cran.r-project.org/web/packages/shinycssloaders/index.html) Add CSS Loading Animations to 'shiny' Outputs
@@ -298,6 +295,7 @@ Applications
   * [stringdist-0.9.5.1](https://cran.r-project.org/web/packages/stringdist/index.html) Approximate String Matching and String Distance Functions
   * [survey-3.35-1](https://cran.r-project.org/web/packages/survey/index.html) Analysis of Complex Survey Samples
   * synapseClient 1.14-3
+  * [sys-3.1](https://cran.r-project.org/web/packages/sys/index.html) Powerful and Reliable Tools for Running System Commands in R
   * [systemPipeR-1.16.1](https://www.bioconductor.org/packages/release/bioc/html/systemPipeR.html) systemPipeR: NGS workflow and report generation environment
   * [tables-0.8.7](https://cran.r-project.org/web/packages/tables/index.html) Formula-Driven Table Generation
   * [tidytree-0.2.4](https://cran.r-project.org/web/packages/tidytree/index.html) A Tidy Tool for Phylogenetic Tree Data Manipulation
