--- a/docs/_r/R-3.6.0-foss-2016b-fh1.md
+++ b/docs/_r/R-3.6.0-foss-2016b-fh1.md
@@ -1,6 +1,6 @@
 ---
 title: R-3.6.0-foss-2016b-fh1
-date: 2019-04-29
+date: 2019-05-02
 ---
 
 ### Package List
@@ -222,6 +222,8 @@ Monte Carlo Studies
   * [lintr-1.0.3](https://cran.r-project.org/web/packages/lintr/index.html) A 'Linter' for R Code
   * [lokern-1.1-8](https://cran.r-project.org/web/packages/lokern/index.html) Kernel Regression Smoothing with Local or Global Plug-in
 Bandwidth
+  * [loo-2.1.0](https://cran.r-project.org/web/packages/loo/index.html) Efficient Leave-One-Out Cross-Validation and WAIC for Bayesian
+Models
   * [lpridge-1.0-8](https://cran.r-project.org/web/packages/lpridge/index.html) Local Polynomial (Ridge) Regression
   * [lumi-2.34.0](https://www.bioconductor.org/packages/release/bioc/html/lumi.html) BeadArray Specific Methods for Illumina Methylation and Expression Microarrays
   * [maSigPro-1.54.0](https://www.bioconductor.org/packages/release/bioc/html/maSigPro.html) Significant Gene Expression Profile Differences in Time Course Gene Expression Data
@@ -277,7 +279,7 @@ and Logs
   * [regtools-1.0.1](https://cran.r-project.org/web/packages/regtools/index.html) Regression Tools
   * [relations-0.6-8](https://cran.r-project.org/web/packages/relations/index.html) Data Structures and Algorithms for Relations
   * [relevent-1.0-4](https://cran.r-project.org/web/packages/relevent/index.html) Relational Event Models
-  * [repr-0.19.2](https://cran.r-project.org/web/packages/repr/index.html) Serializable Representations
+  * [repr-1.0.0](https://cran.r-project.org/web/packages/repr/index.html) Serializable Representations
   * [rex-1.1.2](https://cran.r-project.org/web/packages/rex/index.html) Friendly Regular Expressions
   * [rgenoud-5.8-3.0](https://cran.r-project.org/web/packages/rgenoud/index.html) R Version of GENetic Optimization Using Derivatives
   * [rhdf5-2.26.2](https://www.bioconductor.org/packages/release/bioc/html/rhdf5.html) HDF5 interface to R
@@ -285,6 +287,7 @@ and Logs
   * [rsconnect-0.8.13](https://cran.r-project.org/web/packages/rsconnect/index.html) Deployment Interface for R Markdown Documents and Shiny
 Applications
   * [rslurm-0.4.0](https://cran.r-project.org/web/packages/rslurm/index.html) Submit R Calculations to a Slurm Cluster
+  * [rstan-2.18.2](https://cran.r-project.org/web/packages/rstan/index.html) R Interface to Stan
   * [rtracklayer-1.42.2](https://www.bioconductor.org/packages/release/bioc/html/rtracklayer.html) R interface to genome annotation files and the UCSC genome browser
   * [rvcheck-0.1.3](https://cran.r-project.org/web/packages/rvcheck/index.html) R/Package Version Check
   * [rzmq-0.9.6](https://cran.r-project.org/web/packages/rzmq/index.html) R Bindings for 'ZeroMQ'
