--- a/docs/_r/R-3.6.0-foss-2016b-fh1.md
+++ b/docs/_r/R-3.6.0-foss-2016b-fh1.md
@@ -3,6 +3,17 @@ title: R-3.6.0-foss-2016b-fh1
 date: 2019-05-02
 ---
 
+### Know Issues
+ * Major and minor version .numbers are part of the user search path.  User installed libraries for 3.5.x R need to be re-installed for use with 3.6.x.
+
+ * There is a bug with devtools which does not set the default path for
+ installing local libraries. When installing local libraries, explicitly set
+ the install path:
+```
+# Example
+devtools::install_github('FredHutch/tgR', lib=Sys.getenv("R_LIBS_USER"))
+```
+
 ### Package List
   * [ALDEx2-1.14.1](https://www.bioconductor.org/packages/release/bioc/html/ALDEx2.html) Analysis Of Differential Abundance Taking Sample Variation Into Account
   * ASCAT 2.5.2
