--- a/docs/_r/R-3.6.0-foss-2016b-fh1.md
+++ b/docs/_r/R-3.6.0-foss-2016b-fh1.md
@@ -4,7 +4,7 @@ date: 2019-05-02
 ---
 
 ### Know Issues
- * Major and minor version .numbers are part of the user search path.  User installed libraries for 3.5.x R need to be re-installed for use with 3.6.x.
+ * Major and minor version numbers are part of the user search path.  User installed libraries for 3.5.x R need to be re-installed for use with 3.6.x.
 
  * There is a bug with devtools which does not set the default path for
  installing local libraries. When installing local libraries, explicitly set
