Symphony, Cgl, Clp, CoinUtils, Osi'

--- a/docs/_r/R-3.6.1-foss-2016b-fh1.md
+++ b/docs/_r/R-3.6.1-foss-2016b-fh1.md
@@ -1,10 +1,11 @@
 ---
 title: R-3.6.1-foss-2016b-fh1
-date: 2019-07-09
+date: 2019-07-11
 ---
 
 ### Known Issues
  * None
+
 ### Package List
   * [ADGofTest-0.3](https://cran.r-project.org/web/packages/ADGofTest/index.html) Anderson-Darling GoF test
   * [ALDEx2-1.16.0](https://www.bioconductor.org/packages/release/bioc/html/ALDEx2.html) Analysis Of Differential Abundance Taking Sample Variation Into Account
@@ -31,6 +32,7 @@ Statistics
   * [Biobase-2.44.0](https://www.bioconductor.org/packages/release/bioc/html/Biobase.html) Biobase: Base functions for Bioconductor
   * [BiocFileCache-1.8.0](https://www.bioconductor.org/packages/release/bioc/html/BiocFileCache.html) Manage Files Across Sessions
   * [BiocGenerics-0.30.0](https://www.bioconductor.org/packages/release/bioc/html/BiocGenerics.html) S4 generic functions used in Bioconductor
+  * BiocInstaller 1.8.3
   * [BiocManager-1.30.4](https://cran.r-project.org/web/packages/BiocManager/index.html) Access the Bioconductor Project Package Repository
   * [BiocParallel-1.18.0](https://www.bioconductor.org/packages/release/bioc/html/BiocParallel.html) Bioconductor facilities for parallel evaluation
   * [Biostrings-2.52.0](https://www.bioconductor.org/packages/release/bioc/html/Biostrings.html) Efficient manipulation of biological strings
@@ -692,6 +694,7 @@ Related Functionality
 Models
   * [lpSolve-5.6.13.1](https://cran.r-project.org/web/packages/lpSolve/index.html) Interface to 'Lp_solve' v. 5.5 to Solve Linear/Integer Programs
   * [lpridge-1.0-8](https://cran.r-project.org/web/packages/lpridge/index.html) Local Polynomial (Ridge) Regression
+  * [lpsymphony-1.12.0](https://www.bioconductor.org/packages/release/bioc/html/lpsymphony.html) Symphony integer linear programming solver in R
   * [lqa-1.0-3](https://cran.r-project.org/web/packages/lqa/index.html) Penalized Likelihood Inference for GLMs
   * [lsei-1.2-0](https://cran.r-project.org/web/packages/lsei/index.html) Solving Least Squares or Quadratic Programming Problems under
 Equality/Inequality Constraints
