Python-3.7.4-foss-2016b-fh1, seqtk,

--- a/docs/_r/R-3.6.1-foss-2016b-fh1.md
+++ b/docs/_r/R-3.6.1-foss-2016b-fh1.md
@@ -1,6 +1,6 @@
 ---
 title: R-3.6.1-foss-2016b-fh1
-date: 2019-07-11
+date: 2019-08-12
 ---
 
 ### Known Issues
@@ -87,6 +87,7 @@ Sensitivity, Identifiability and Monte Carlo Analysis
   * [GOstats-2.50.0](https://www.bioconductor.org/packages/release/bioc/html/GOstats.html) Tools for manipulating GO and microarrays
   * [GSA-1.03.1](https://cran.r-project.org/web/packages/GSA/index.html) Gene Set Analysis
   * [GSEABase-1.46.0](https://www.bioconductor.org/packages/release/bioc/html/GSEABase.html) Gene set enrichment data structures and methods
+  * [GSVA-1.32.0](https://www.bioconductor.org/packages/release/bioc/html/GSVA.html) Gene Set Variation Analysis for microarray and RNA-seq data
   * [GUTS-1.1.1](https://cran.r-project.org/web/packages/GUTS/index.html) Fast Calculation of the Likelihood of a Stochastic Survival
 Model
   * [GWASExactHW-1.01](https://cran.r-project.org/web/packages/GWASExactHW/index.html) Exact Hardy-Weinburg testing for Genome Wide Association Studies
@@ -503,7 +504,7 @@ Censored Data
   * [fma-2.3](https://cran.r-project.org/web/packages/fma/index.html) Data Sets from "Forecasting: Methods and Applications" by
 Makridakis, Wheelwright & Hyndman (1998)
   * [forcats-0.4.0](https://cran.r-project.org/web/packages/forcats/index.html) Tools for Working with Categorical Variables (Factors)
-  * [foreach-1.4.4](https://cran.r-project.org/web/packages/foreach/index.html) Provides Foreach Looping Construct for R
+  * [foreach-1.4.4](https://cran.r-project.org/web/packages/foreach/index.html) Provides Foreach Looping Construct
   * [forecast-8.7](https://cran.r-project.org/web/packages/forecast/index.html) Forecasting Functions for Time Series and Linear Models
   * [foreign-0.8-71](https://cran.r-project.org/web/packages/foreign/index.html) Read Data Stored by 'Minitab', 'S', 'SAS', 'SPSS', 'Stata',
 'Systat', 'Weka', 'dBase', ...
@@ -639,7 +640,7 @@ Network
   * [irace-3.3](https://cran.r-project.org/web/packages/irace/index.html) Iterated Racing for Automatic Algorithm Configuration
   * [irlba-2.3.3](https://cran.r-project.org/web/packages/irlba/index.html) Fast Truncated Singular Value Decomposition and Principal
 Components Analysis for Large Dense and Sparse Matrices
-  * [iterators-1.0.10](https://cran.r-project.org/web/packages/iterators/index.html) Provides Iterator Construct for R
+  * [iterators-1.0.10](https://cran.r-project.org/web/packages/iterators/index.html) Provides Iterator Construct
   * [itertools-0.1-3](https://cran.r-project.org/web/packages/itertools/index.html) Iterator Tools
   * [its-1.1.8](https://cran.r-project.org/web/packages/its/index.html) Irregular Time Series
   * [janeaustenr-0.1.5](https://cran.r-project.org/web/packages/janeaustenr/index.html) Jane Austen's Complete Novels
@@ -1121,6 +1122,7 @@ Signal Processing
   * [wikitaxa-0.3.0](https://cran.r-project.org/web/packages/wikitaxa/index.html) Taxonomic Information from 'Wikipedia'
   * [withr-2.1.2](https://cran.r-project.org/web/packages/withr/index.html) Run Code 'With' Temporarily Modified Global State
   * [worrms-0.3.2](https://cran.r-project.org/web/packages/worrms/index.html) World Register of Marine Species (WoRMS) Client
+  * xCell 1.2
   * [xfun-0.7](https://cran.r-project.org/web/packages/xfun/index.html) Miscellaneous Functions by 'Yihui Xie'
   * [xlsx-0.6.1](https://cran.r-project.org/web/packages/xlsx/index.html) Read, Write, Format Excel 2007 and Excel 97/2000/XP/2003 Files
   * [xlsxjars-0.6.1](https://cran.r-project.org/web/packages/xlsxjars/index.html) Package required POI jars for the xlsx package
